tests/errors/merge.f90
program eval_merge
    print*, merge("okay", "ok", .true.)
end program eval_merge